--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,45 +1,26 @@
 <resources>
-    <string name="app_name">Global Pages</string>
+    <string name="app_name" translatable="false">Global Pages</string>
 
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDAbTRgO8FsaOZ_410l83nQb5G1-OhEdXo</string>
 
     <string name="contentDescription">content Description</string>
 
-    <string name="signInHeader">Welcome to Global Pages \n Your best destination to find \n great deals around</string>
+    <!--SignUp started-->
     <string name="Email">Email</string>
-    <string name="Password">Password</string>
-    <string name="Forgotpassword">Forgot password?</string>
-    <string name="Login">Login</string>
-    <string name="or">or</string>
-    <string name="Register">Register</string>
-    <string name="anewAccount">a new account</string>
-    <string name="forgotHeader">So you forgot your password?</string>
-    <string name="Submit">Submit</string>
-    <string name="resetPassword">Reset password</string>
-    <string name="Birthdate">Birth date</string>
-    <string name="businessOwner">I\'m Business Owner</string>
-    <string name="Accept">Accept</string>
-    <string name="SignUp">Signup</string>
-    <string name="haveanaccount">Have an account?</string>
     <string name="UserName">UserName</string>
-    <string name="AddBusiness">Add Business</string>
-    <string name="Skip">Skip</string>
-    <string name="Phonenumber">Phone number</string>
-    <string name="Phonenumber2">Phone number2</string>
-    <string name="businessType">Business Type</string>
-    <string name="SubCategory">Sub-Category</string>
-    <string name="Location">Location</string>
-    <string name="Optional">(Optional)</string>
-    <string name="Description">Description</string>
-    <string name="Fax">Fax</string>
-    <string name="Profile">Profile</string>
-    <string name="MyProfile">My Profile</string>
+    <string name="Password">Password</string>
+    <string name="Birthdate">Birth date</string>
     <string name="male">male</string>
     <string name="female">female</string>
+    <string name="businessOwner">I\'m Business Owner</string>
+    <string name="Accept">Accept</string>
     <string name="privacypolicy">Privacy Policy</string>
     <string name="and">and</string>
     <string name="termsandconditions">Terms and conditions</string>
-    <string name="pleaseWait">Please wait...</string>
+    <string name="SignUp">Signup</string>
+    <string name="haveanaccount">Have an account?</string>
+    <string name="Login">Login</string>
+    <string name="pleaseWait">Please wait &#8230;</string>
     <string name="enteremail">Enter email</string>
     <string name="entercorrectemail">Enter correct email</string>
     <string name="enterusername">Enter username</string>
@@ -48,64 +29,79 @@
     <string name="selectBirthDate">Select Birthdate</string>
     <string name="invalidEmailorPassword">Invalid email or password</string>
     <string name="checkInternetConnection">Check internet connection</string>
-    <string name="emailnotExisted">Email not existed</string>
-    <string name="resetPasswordSuccesfully">Reset password succesfully</string>
     <string name="Yes">Yes</string>
     <string name="No">No</string>
     <string name="doYouWantAddFirstBusiness">Do you want add first business</string>
+    <string name="AlreadyExisted">Already existed</string>
 
-    <string name="businessGuideTitle1">Businesses Guide</string>
-    <string name="businessGuideDetails1">search for businesses  \n nearby and find them  \n on the map</string>
-    <string name="businessGuideTitle2">On Duty Pharmacies</string>
-    <string name="businessGuideDetails2">Find Open Pharmacies  \n Nearby</string>
+    <!--Sign in started-->
+    <string name="signInHeader">Welcome to Global Pages \n Your best destination to find \n great deals around</string>
+    <string name="Forgotpassword">Forgot password?</string>
+    <string name="or">or</string>
+    <string name="Register">Register</string>
+    <string name="anewAccount">a new account</string>
+
+    <!--forget password-->
+    <string name="forgotHeader">So you forgot your password?</string>
+    <string name="Submit">Submit</string>
+    <string name="resetPassword">Reset password</string>
+    <string name="emailnotExisted">Email not existed</string>
+    <string name="resetPasswordSuccesfully">Reset password successfully</string>
+
+    <!--filter started-->
+    <string name="Filter">Filter</string>
     <string name="Searchkeyword">Search keyword</string>
     <string name="Keyword">Keyword</string>
     <string name="Category">Category</string>
     <string name="City">City</string>
     <string name="Area">Area</string>
     <string name="Apply">Apply</string>
-    <string name="AlreadyExisted">Already existed</string>
-    <string name="Filter">Filter</string>
 
-    <string name="lorem">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
-		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
-		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
-		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
-		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
-		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
-		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
-		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
-		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
-		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
-		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
-		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
-		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
-	</string>
+    <!--home-->
+    <string name="BusinessGuide">Business Guide</string>
+    <string name="FindNearBy">Find nearby</string>
+    <string name="OnDutyPharmacies">On Duty Pharmacies</string>
+
+    <!--post details-->
+    <string name="Addedin">Added In</string>
+    <string name="Contact">Contact</string>
+    <string name="Description">Description</string>
+
+    <!--profile-->
     <string name="AdsAdded">Ads Added</string>
     <string name="SubscribetoCategory">Subscribe to categories</string>
     <string name="MyAds">My Ads</string>
     <string name="MyBusiness">My Business</string>
-    <string name="Addedin">Added In</string>
-    <string name="Contact">Contact</string>
-    <string name="Subscrition">Description</string>
-    <string name="BusinessName">Business name</string>
-    <string name="BusinessGuide">Business Guide</string>
-    <string name="FindNearBy">Find near by</string>
-    <string name="OnDutyPharmacies">On duty pharmacies</string>
-    <string name="nearByPharmacies">Near By Pharmacies</string>
+    <string name="Profile">Profile</string>
+    <string name="MyProfile">My Profile</string>
+
+    <!--add post-->
     <string name="AddNewAd">Add New Ad</string>
-    <string name="AboutYourAd">About your ad</string>
-    <string name="Images">Images</string>
     <string name="AdTitleMaxchars">Ad Title ( Max 35 chars )</string>
     <string name="HouseForSale">House for sale</string>
+    <string name="AboutYourAd">About your ad</string>
+    <string name="Images">Images</string>
     <string name="RegisterBusiness">Register Business</string>
     <string name="AddSubmitted">Add Submitted</string>
+    <string name="Backtohome">Back to home</string>
+    <string name="WeWillReviewYourAdAndContactYouBack">We will review your ad and contact \n you back</string>
+
+    <!--add business-->
+    <string name="AddBusiness">Add Business</string>
+    <string name="Skip">Skip</string>
+    <string name="BusinessName">Business name</string>
+    <string name="Phonenumber">Phone number</string>
+    <string name="Phonenumber2">Phone number2</string>
+    <string name="businessType">Business Type</string>
+    <string name="SubCategory">Sub-Category</string>
+    <string name="Location">Location</string>
+    <string name="Optional">(Optional)</string>
+    <string name="Fax">Fax</string>
+
+    <!--business details-->
     <string name="Edit">Edit</string>
-    <string name="ServicesAndProducts">Services and Products</string>
-    <string name="Ok">Ok</string>
+    <string name="Ok">OK</string>
+    <string name="ServicesAndProducts">Services and products</string>
 
 
 </resources>
