date:at morning 2018-07-30  comment:  1-Home Page Post Cell with Type  2-Profile Post Cell with type  3-Localize Category , Subcategory , City , area ,Post  4-Post Filter (TagView Except Suggestion)
 Note: please note Add (Ads ,Business ,post)
 commit in mainActivity

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -103,5 +103,7 @@
 
     <string name="Categories">الأصناف</string>
     <string name="SubCategories">الأصناف الفرعية</string>
+    <string name="Your">أنت</string>
+    <string name="selectWhatAreYou"> أختر ما تبحث عنه \n وسوف نعرض لك اقرب ثلاث خيارات </string>
 
 </resources>
