User Profile + Post Details + Post reFilter with remove tag
User Profile + Post Details + Post reFilter with remove tag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="NoDataFound">No data found</string>
     <string name="Retry">Retry</string>
     <string name="noMoreVolumeFound">No more volume found</string>
+    <string name="In">In</string>
 
 
 </resources>
