--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -105,5 +105,6 @@
     <string name="SubCategories">الأصناف الفرعية</string>
     <string name="Your">أنت</string>
     <string name="selectWhatAreYou"> أختر ما تبحث عنه \n وسوف نعرض لك اقرب ثلاث خيارات </string>
+    <string name="Location_Permission_denied">Location Permission denied.</string>
 
 </resources>
