--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -110,5 +110,10 @@
     <string name="UpdateProfile">تعديل البروفايل</string>
     <string name="NoInternetConnection">لايوجد إتصال بالإنترنت</string>
     <string name="NoInternetConnectionTryRefreshData">No internet connection try refresh data</string>
+    <string name="UploadImageForServiceOrProduct">Upload image for service or product</string>
+    <string name="ProductName">Product name</string>
+    <string name="PickUpLocation">Pick up location</string>
+    <string name="pleaseSelectLocation">Please select location</string>
+    <string name="uploadFileSuccessfully">Upload file successfully</string>
 
 </resources>
