--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,8 @@
     <string name="Thuday">Thuday</string>
     <string name="openDays">Open days</string>
     <string name="unexpectedErrorHappend">Unexpected error happend</string>
+    <string name="productAddedSuccessfully">Product added successfully</string>
+    <string name="productUpdatedSuccessfully">Product updated successfully</string>
 
 
 </resources>
