--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -109,23 +109,25 @@
     <string name="Approve_Permissions_To_Pick_Images">الرجاء منح الإذونات لجلب الصور</string>
     <string name="UpdateProfile">تعديل البروفايل</string>
     <string name="NoInternetConnection">لايوجد إتصال بالإنترنت</string>
-    <string name="NoInternetConnectionTryRefreshData">No internet connection try refresh data</string>
-    <string name="UploadImageForServiceOrProduct">Upload image for service or product</string>
-    <string name="ProductName">Product name</string>
-    <string name="PickUpLocation">Pick up location</string>
-    <string name="pleaseSelectLocation">Please select location</string>
-    <string name="uploadFileSuccessfully">Upload file successfully</string>
-    <string name="Add">Add</string>
-    <string name="Sunday">Sunday</string>
-    <string name="Monday">Monday</string>
-    <string name="Satday">Satday</string>
-    <string name="Friday">Friday</string>
-    <string name="Tueday">Tueday</string>
-    <string name="Wenday">Wenday</string>
-    <string name="Thuday">Thuday</string>
-    <string name="openDays">Open days</string>
-    <string name="unexpectedErrorHappend">Unexpected error happend</string>
-    <string name="productAddedSuccessfully">Product added successfully</string>
-    <string name="productUpdatedSuccessfully">Product updated successfully</string>
+    <string name="NoInternetConnectionTryRefreshData">لايوجد إتصال بالإنترنت</string>
+    <string name="UploadImageForServiceOrProduct">تحميل صورة</string>
+    <string name="ProductName">اسم المنتج</string>
+    <string name="PickUpLocation">إلتقط العنوان</string>
+    <string name="pleaseSelectLocation">إلتقط العنوان</string>
+    <string name="uploadFileSuccessfully">تم تحميل الصورة ينجاح</string>
+    <string name="Add">إضافة</string>
+    <string name="Sunday">الأحد</string>
+    <string name="Monday">الإثنين</string>
+    <string name="Tueday">الثلاثاء</string>
+    <string name="Wenday">الأربعاء</string>
+    <string name="Thuday">الخميس</string>
+    <string name="Friday">الجمعة</string>
+    <string name="Satday">السبت</string>
+    <string name="openDays">أيام المناوبة</string>
+    <string name="unexpectedErrorHappend">حدث خطأ</string>
+    <string name="productAddedSuccessfully">تم إضافة المنتج بنجاح</string>
+    <string name="productUpdatedSuccessfully">تم تحديث المنتج بنجاح</string>
+    <string name="Call">إتصال</string>
+    <string name="Address">العنوان</string>
 
 </resources>
