--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">Global Pages</string>
 
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDAbTRgO8FsaOZ_410l83nQb5G1-OhEdXo</string>
+    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDAbTRgO8FsaOZ_410l83nQb5G1-OhEdXo</string>-->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBjqioJFsSmfzlviqJRnQyejNE8y9tFYbg</string>
 
     <string name="contentDescription">content Description</string>
 
@@ -132,6 +133,8 @@
     <string name="unexpectedErrorHappend">Unexpected error happend</string>
     <string name="productAddedSuccessfully">Product added successfully</string>
     <string name="productUpdatedSuccessfully">Product updated successfully</string>
+    <string name="Call">Call</string>
+    <string name="Address">Address</string>
 
 
 </resources>
