--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -138,5 +138,6 @@
     <string name="ContactUs">Contact us</string>
     <string name="TermsOfUse">Terms of use</string>
     <string name="SendMail">Send mail</string>
+    <string name="Notifications">Notifications</string>
 
 </resources>
