--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -145,5 +145,11 @@
     <string name="doYouWantFollowNotificationsUnderThisCategory">هل تريد تتبع التنبيهات ضمن هذا الصنف</string>
     <string name="doYouWantUnFollowNotificationsUnderThisCategory">هل تريد إلعاء تتبع التنبيهات ضمن هذا الصنف</string>
     <string name="SubscribedCategoriesUpdateSuccessfully">تمت العملية بنجاح</string>
+    <string name="selectTopicsDoYou">select what are you look for \n and we will find you top 3 nearby ones</string>
+    <string name="weCannotDetermineYourLocation">لم نتمكن من تحديد موقعك</string>
+    <string name="NoDataFound">لايوجد بيانات</string>
+    <string name="Retry">إعادة المحاولة</string>
+    <string name="noMoreVolumeFound">لايوجد بيانات</string>
+    <string name="In">في</string>
 
 </resources>
