--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="AlreadyExisted">Already existed</string>
 
     <!--Sign in started-->
-    <string name="signInHeader">Welcome to Global Pages \n Your best destination to find \n great deals around</string>
+    <string name="signInHeader">Welcome to Almersal \n Your best destination to find \n great deals around</string>
     <string name="Forgotpassword">Forgot password?</string>
     <string name="or">or</string>
     <string name="Register">Register</string>
