--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -151,5 +151,6 @@
     <string name="Retry">إعادة المحاولة</string>
     <string name="noMoreVolumeFound">لايوجد بيانات</string>
     <string name="In">في</string>
+    <string name="enterNumber">أدخل الرقم</string>
 
 </resources>
