--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="SubscribedCategoriesUpdateSuccessfully">Subscribed categories update successfully</string>
     <string name="selectTopicsDoYou">Please select the ads types \n you are interested in</string>
     <string name="weCannotDetermineYourLocation">We can\'t determine your location</string>
+    <string name="enterNumber">Enter number</string>
 
 
 </resources>
