--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,7 +144,7 @@
         or transmitted on any form or by any means</string>
     <string name="Logout">Logout</string>
     <string name="AboutUs">About us</string>
-    <string name="settingsTitle">Florists at your finger tips</string>
+    <string name="settingsTitle">Know whats arround you</string>
     <string name="ContactUs">Contact us</string>
     <string name="TermsOfUse">Terms of use</string>
     <string name="SendMail">Send mail</string>
