--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,7 +158,7 @@
     <string name="Videos">Videos</string>
     <string name="cantPlayThisVideo">Can\'t play this video</string>
     <string name="noApplicationToOpenEmail">No application found to open email</string>
-    <string name="NewVolumeAdded">New volume added</string>
+    <string name="NewVolumeAdded">There is some ads that might interist you in this new volume</string>
 
 
 </resources>
