--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -154,7 +154,13 @@
     <string name="enterNumber">أدخل الرقم</string>
     <string name="Videos">فيديوهات</string>
     <string name="cantPlayThisVideo">لايمكن تشغيل الفيديو</string>
-    <string name="noApplicationToOpenEmail">No application found to open email</string>
-    <string name="NewVolumeAdded">New volume added</string>
+    <string name="noApplicationToOpenEmail">لايوجد تطبيق لفتح البريد الإلكتروني</string>
+    <string name="NewVolumeAdded">تم إضافة مجموعة جديدة</string>
+    <string name="delete">حذف</string>
+    <string name="doYouWantDeleteAllNotifications">هل تريد حذف كل التنبيهات</string>
+    <string name="notificationsDeleteSuccessfully">تم حذف التنبيهات بنجاح</string>
+    <string name="notificationDeleteSuccessfully">تم حذف التنبيه بنجاح</string>
+    <string name="notificationsDeleteFailed">فشل حذف التنبيه</string>
+    <string name="notificationDeleteFailed">فشل حذف التنبيه</string>
 
 </resources>
